--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "yarn generate &&  yarn transpile && yarn flow-copy",
-    "generate": "yarn clean && BABEL_ENV=es5 babel src --ignore src/index,src/__mocks__ -d lib && yarn copy-index && node lib/script",
+    "generate": "yarn clean && BABEL_ENV=es5 babel src --ignore 'src/index' -d lib && yarn copy-index && node lib/script",
     "transpile": "yarn babelify && yarn flow-copy",
-    "babelify": "rimraf module && babel lib -d module",
-    "flow-copy": "flow-copy-source -v lib module",
+    "babelify": "rimraf dist && babel lib --ignore script/* -d dist",
+    "flow-copy": "flow-copy-source -v -i 'script/**/*' lib dist",
     "babel-node": "BABEL_ENV=es5 babel src -d lib",
     "copy-index": "mkdir -p lib && cp src/index.js lib/",
-    "clean": "rimraf src/debug && rimraf lib && rimraf module"
+    "clean": "rimraf src/debug && rimraf lib && rimraf dist",
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development"
   },
   "repository": {
     "type": "git",
@@ -72,6 +73,11 @@
     "flow-typed": "^2.4.0",
     "graphql-tag": "^2.9.2",
     "stylelint-config-prettier": "^3.0.4",
-    "stylelint-config-shopify": "^5.0.0"
+    "stylelint-config-shopify": "^5.0.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.0.7",
+    "webpack": "^4.2.0",
+    "webpack-cli": "^2.0.12",
+    "webpack-dev-server": "^3.1.1"
   }
 }
