--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "yarn generate &&  yarn transpile && yarn flow-copy",
     "generate": "yarn clean && BABEL_ENV=es5 babel src --ignore 'src/index' -d lib && yarn copy-index && node lib/script",
     "transpile": "yarn babelify && yarn flow-copy",
-    "babelify": "rimraf dist && babel lib --ignore script/* -d dist",
+    "babelify": "./node_modules/.bin/rimraf dist && babel lib --ignore script/* -d dist",
     "flow-copy": "flow-copy-source -v -i 'script/**/*' lib dist",
     "babel-node": "BABEL_ENV=es5 babel src -d lib",
     "copy-index": "mkdir -p lib && cp src/index.js lib/",
-    "clean": "rimraf src/debug && rimraf lib && rimraf dist",
+    "clean": "./node_modules/.bin/rimraf src/debug && ./node_modules/bin/rimraf lib && ./node_modules/bin/rimraf dist",
     "start": "webpack-dev-server --config ./webpack.config.js --mode development"
   },
   "repository": {
@@ -30,7 +30,7 @@
     "url": "https://github.com/jgrisafe/shopify-apollo-components/issues"
   },
   "homepage": "https://github.com/jgrisafe/shopify-apollo-components#readme",
-  "peerDependencies": {
+  "dependencies": {
     "apollo-cache-inmemory": "^1.2.6",
     "apollo-client": "^2.3.7",
     "apollo-link-context": "^1.0.8",
@@ -72,10 +72,10 @@
     "flow-copy-source": "^1.3.0",
     "flow-typed": "^2.4.0",
     "graphql-tag": "^2.9.2",
-    "stylelint-config-prettier": "^3.0.4",
-    "stylelint-config-shopify": "^5.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.7",
+    "stylelint-config-prettier": "^3.0.4",
+    "stylelint-config-shopify": "^5.0.0",
     "webpack": "^4.2.0",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1"
