--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
     "basic-example": "yarn start -- --app product-by-handle",
     "context-example": "yarn start -- --app use-with-context",
-    "debug": "node_modules/.bin/rimraf src/debug"
+    "debug": "node_modules/.bin/rimraf src/debug",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -46,9 +47,9 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
-    "babel-jest": "^22.4.1",
+    "babel-jest": "^23.4.2",
     "babel-loader": "^7.1.4",
     "babel-plugin-emotion": "^9.2.6",
     "babel-plugin-lodash": "^3.3.2",
@@ -77,6 +78,8 @@
     "graphql-tag": "^2.9.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.7",
+    "jest": "^23.4.2",
+    "regenerator-runtime": "^0.12.1",
     "stylelint-config-prettier": "^3.0.4",
     "stylelint-config-shopify": "^5.0.0",
     "webpack": "^4.2.0",
