--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "html-webpack-plugin": "^3.0.7",
     "jest": "^23.4.2",
     "regenerator-runtime": "^0.12.1",
+    "rimraf": "^2.6.2",
     "stylelint-config-prettier": "^3.0.4",
     "stylelint-config-shopify": "^5.0.0",
     "webpack": "^4.2.0",
